# SDR_Town

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE.txt  README.md  SHA256SUMS.txt  release.ps1  update.json  update.json.example  vcpkg.json
docs/: P25_FULL_AUDIT_2026_07.md  P25_PHASE2_070533_CONTINUITY_FIX_NOTES.md  P25_PHASE2_070533_CONTINUITY_ROUND2_NOTES.md  P25_PHASE2_080118_SILENCE_FIX_NOTES.md  P25_SDRTRUNK_FULL_COMPARISON.md  classifier_training_data_plan.md  feature_alignment_next.md  p25_phase2_regression_tracker.md  p25_phase2_release_gate.md  signal_classifier.md
include/: AudioEngine.h  ClassifierModelBackend.h  Demod.h  DeviceManager.h  ITranscriptSource.h  P25Control.h  P25DebugStage.h  P25FollowStateMachine.h  P25LiveDecoder.h  P25ReceiverSession.h  P25TrafficChannelProcessor.h  P25TranscriptSource.h  Receiver.h  RemoteDiagnostics.h  SignalClassifier.h  SpectrumWidget.h  SttEngine.h  TranscriptHub.h  TranscriptTypes.h  TranscriptWindow.h  UpdateManager.h  UpdateManifestSignature.h
include/dsp/: DspKernels.h  P25CqpskStagedScorer.h  P25DemodStateMachine.h  P25DspTypes.h  P25FilterCache.h  P25Phase2Framer.h  P25StreamingChannelDdc.h
scripts/: build_classifier_manifest.py  build_test_validate.ps1  generate_synthetic_classifier_data.py  install_remote_diag_task.ps1  p25_stream_voicetest.ps1  release.ps1  setup_stt.ps1  sign_update_manifest.ps1  start_remote_diag_server.ps1  stt_transcribe_wav.py  test_all.ps1  train_classifier.py
src/: AFC_FREEZE_AND_ENCRYPTED_FOLLOW_FIX_NOTES.md  AUDIO_GATE_NOISE_BLIP_FIX_NOTES.md  AudioEngine.cpp  BUILD_FIX_18A_COMPILE_FIX_NOTES.md  BUILD_FIX_19A_COMPILE_FIX_NOTES.md  BUILD_FIX_3_NOTES.md  CAPTURE_LOGGING_FIX_NOTES.md  CAPTURE_P25_LOG_SINK_FIX_NOTES.md  CAPTURE_P25_STREAMING_LOG_FIX_NOTES.md  CAPTURE_WORKFLOW_README.md  ClassifierModelBackend.cpp  Demod.cpp  DeviceManager.cpp  FORWARD_HARDENING_NOTES.md  IQ_CAPTURE_GUI_IMPLEMENTATION_NOTES.md  IQ_CAPTURE_START_STOP_IMPLEMENTATION_NOTES.md  ONLINE_REFERENCE_VALIDATION.md  P25Control.cpp  P25FollowStateMachine.cpp  P25LiveDecoder.cpp  P25TrafficChannelProcessor.cpp  P25TranscriptSource.cpp  P25_CC_UI_CRASH_HOTFIX_NOTES.md  P25_FOLLOW_CRASH_GUARD_BUILD28_NOTES.md  P25_FOLLOW_DEFERRED_ARM_BUILD29_NOTES.md  P25_INDEPENDENT_TRAFFIC_SOURCE_PATCH_NOTES.md  P25_ONE_RTL_RETURN_TO_CONTROL_FIX_NOTES.md  P25_ONE_RTL_TRAFFIC_SOURCE_FIX_NOTES.md  P25_PHASE2_ACCH_DIRECT_CRC_RS_BYPASS_NOTES.md  P25_PHASE2_ACCH_PAYLOAD_FIX_NOTES.md  P25_PHASE2_AMBE_ACCEPT_VARIANT_PATCH_NOTES.md  P25_PHASE2_AUDIO_FIRST_BIG_TICKET_PATCH_NOTES.md  P25_PHASE2_AUDIO_PATH_FAST_ARM_PATCH_NOTES.md  P25_PHASE2_FIELD_LOG_FOLLOWUP_PATCH_NOTES.md  P25_PHASE2_LIVE_EDGE_STALE_FLUSH_NOTES.md  P25_PHASE2_LIVE_PIPELINE_PARITY_NOTES.md  P25_PHASE2_MAC_RECOVERY_AND_CANDIDATE_SEARCH_PATCH_NOTES.md  P25_PHASE2_SDRTRUNK_FLOW_PARITY_CONTINUITY_PATCH_NOTES.md  P25_PHASE2_SDRTRUNK_HARD_PARITY_NOTES.md  P25_PHASE2_SDRTRUNK_ORDER_CROSSCHECK_PATCH_NOTES.md  (+49 more)
src/dsp/: DspKernels.cpp  P25CqpskStagedScorer.cpp  P25DemodStateMachine.cpp  P25FilterCache.cpp  P25Phase2Framer.cpp  P25StreamingChannelDdc.cpp
src/tools/: analyze_iq_capture.py  bench_p25_iq_replay.py  p25_capture_audit.py  remote_diag_server.py  run_p25_capture_deep_audit.py  run_p25_capture_replay_audit.py  run_p25_capture_replay_suite.py  run_p25_clear_audio_until_pass.py  run_p25_live_clear_audio_diag.py  verify_gui_analog_audio_playback.py  verify_p25_cc_ui_crash_hotfix.py  verify_p25_independent_traffic_source.py  verify_p25_one_rtl_return_to_control.py  verify_p25_one_rtl_traffic_source.py  verify_p25_phase2_absolute_audio_dedupe.py  verify_p25_phase2_acch_direct_crc_bypass.py  verify_p25_phase2_acch_mapping.py  verify_p25_phase2_acch_payload_160_fix.py  verify_p25_phase2_ambe_accept_variant_patch.py  verify_p25_phase2_ambe_gate_relaxed_block_emit.py  verify_p25_phase2_ambe_hash_dedupe.py  verify_p25_phase2_audio_first_big_ticket.py  verify_p25_phase2_audio_jitter_buffer.py  verify_p25_phase2_audio_low_latency.py  verify_p25_phase2_audio_path_fast_arm.py  verify_p25_phase2_bootstrap_mask_feed.py  verify_p25_phase2_capture_fixes.py  verify_p25_phase2_clear_grant_op02_preservation.py  verify_p25_phase2_continuous_rolling_iq.py  verify_p25_phase2_current_call_encrypted_hold.py  verify_p25_phase2_decode_through_settle_and_offset.py  verify_p25_phase2_deep_diag_logging.py  verify_p25_phase2_deferred_decode_cursor.py  verify_p25_phase2_duid_sdrtrunk_table.py  verify_p25_phase2_ess_gate.py  verify_p25_phase2_field_log_handoff_grace.py  verify_p25_phase2_force_retune_follow.py  verify_p25_phase2_forensic_timeline_p0.py  verify_p25_phase2_forensic_timeline_p1.py  verify_p25_phase2_forensic_timeline_p2.py  (+62 more)
tests/: run_cli_tests.ps1  run_gui_startup_tests.ps1  run_p25_audio_fix_loop.ps1  test_audioengine.cpp  test_demod.cpp  test_devicemanager.cpp  test_p25control.cpp  test_p25dsp.cpp  test_p25follow.cpp  test_p25live.cpp  test_p25traffic_processor.cpp
